# zetasql-server

./: .bazelrc  BUILD  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  go.mod  main.go  parse_query.cc  parse_query.h  zetasql.go
.github/workflows/: go.yml
examples/: Makefile
pkg/: BUILD.bazel  entity_test.go  version.go
pkg/entity/: BUILD.bazel  entity.go
pkg/parse/: BUILD.bazel  ast.go  lexer.go  parse_test.go  parser.go.y  stack.go  test.sql  y.go  y.output
tools/: BUILD.bazel  e2e_run.go
